<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/topbj" >

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/selector_menu"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_lastM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@drawable/iv_last_m" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/iv_nextM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@drawable/iv_next_m" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/rltopbj"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="@color/l_black"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#cccccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="@color/l_black"
                android:textSize="18dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginRight="1dp"
            android:background="#bec3cf" />

        <FrameLayout
            android:id="@+id/lay_grid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp" >

            <GridView
                android:id="@+id/calendar_gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:listSelector="@null"
                android:numColumns="7" >
            </GridView>

            <GridView
                android:id="@+id/calendar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:listSelector="@null"
                android:numColumns="7" >
            </GridView>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>